# nuada

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _batch.sh  _main.py  _pipeline.py  compose.yaml  config.py  pyproject.toml  requirements.txt  setup.sh  setup_vpc.py  teardown.sh
.github/workflows/: production-deployment.yaml
_archive/: lambda_upload.py  setup.sh  setup_vpc.py
_archive/aws/: policy.json
aws/: notification.json  targets.json
data-upload/: lambda_function.py
dbm/: models.py  sources.py
docker/pipeline/: Dockerfile
nuada/: __init__.py  actions.py  db.py  lambda_transfer.py  resources.py
nuada/data-upload/: lambda_function.py
src/: lambda_transfer.py  lambda_upload.py
src/nuada/: __init__.py  db.py  models.py  resources.py  transformer.py
src/nuada/api/: __init__.py
src/nuada/interface/: get_source_trends.sql  get_topic_frequencies.sql  get_topic_trends.sql
src/nuada/pipeline/: __init__.py  db.py  resources.py  transformer.py
tests/: conftest.py  test_db.py  test_pipeline.py  test_transformer.py
tests/fixtures/: sample_nyt.json  sample_nyt_archive_search.json
tests/pipeline/: conftest.py  test_db.py  test_models.py  test_transformer.py
