[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "nuada"
version = "0.0.0.9000"
authors = [
  { name="Johnny Breen", email="johnnyb1694@gmail.com" },
]
description = "A small package of functions and methods for processing news data APIs, aggregating the data into a centralised database and exposing this data to third-party users"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.1.0",
  "sqlalchemy>=2.0.0",
  "requests>=2.31.0",
  "nltk>=3.8.1",
  "greenlet>=3.0.1"
]

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]
addopts = [
    "--import-mode=importlib",
]

[project.urls]
Homepage = "https://github.com/johnnyb1694/nuada"
Issues = "https://github.com/johnnyb1694/nuada/issues"